# insurance-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
data/claims_data/: claims.json
data/policy_docs/: claims_procedures.txt
eval/: results.csv  results.parquet
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  ClaimDraftPanel.css  ClaimDraftPanel.jsx
frontend/src/styles/: App.css  index.css
src/: agent.py  analytics.py  api.py  eval.py  ingest.py  tools.py  train.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: README.md  sample_claims.json
tests/integration/: __init__.py  test_agent_e2e.py  test_api.py  test_eval_e2e.py  test_ingest_e2e.py
tests/unit/: __init__.py  test_agent_nodes.py  test_api_security.py  test_eval_metrics.py  test_eval_new_coverage.py  test_ingest_utils.py  test_rrf_merge.py
